Fix badges overflow & update junte UI

--- a/src/components/shared/salaries/detail/salary-detail.component.scss
+++ b/src/components/shared/salaries/detail/salary-detail.component.scss
@@ -25,7 +25,7 @@ $jnt-ng-deep: true;
 
   [data-nav] {
     // TODO: Move to mixins api
-    margin: 0 $jnt-gutter-normal;
+    margin: 0 $jnt-gutter-normal $jnt-gutter-normal;
   }
 }
 
